Added variable to pass the SSH PK folder
Signed-off-by: Dimitar Dimitrov <dev.dimitar.dimitrov@gmail.com>

--- a/launchpad-stack-aws3/.gitignore
+++ b/launchpad-stack-aws3/.gitignore
@@ -8,6 +8,10 @@
 **/terraform.tfstate.backup
 **/terraform.tfstate.*.backup
 
+# tfvars file
+*.auto.tfvars
 my_tf.cfg
 
 launchpad.yaml
+
+**/ssh-keys/
