--- a/k0sctl-stack-aws3/config/infra.tfvars.template
+++ b/k0sctl-stack-aws3/config/infra.tfvars.template
@@ -6,46 +6,39 @@ aws = {
 }
 
 k0sctl = {
-    version = "v1.28.4+k0s.0"
+  version = "v1.28.4+k0s.0"
 
-    no_wait = false
-    no_drain = false
+  no_wait  = false
+  no_drain = false
 
-    force = false
+  force = false
 
-    disable_downgrade_check = false
+  disable_downgrade_check = false
 
-    restore_from = ""
+  restore_from = ""
 
-    skip_create =  false
-    skip_destroy = true
+  skip_create  = false
+  skip_destroy = true
 }
 
 // configure the network stack
 network = {
-  cidr                 = "172.31.0.0/16"
-  public_subnet_count  = 3
-  private_subnet_count = 0 // if 0 then no private nodegroups allowed
+  cidr                = "172.31.0.0/16"
+  public_subnet_count = 3
 }
 
 // one definition for each group of machines to include in the stack
 nodegroups = {
-  "ACon" = { // controllers for A
-    platform    = "ubuntu_22.04"
-    count       = 1
-    type        = "m6a.2xlarge"
-    volume_size = 100
-    role        = "controller"
-    public      = true
-    user_data   = ""
+  "Con_Ubu22" = { // group of Ubuntu 22 controllers
+    platform = "ubuntu_22.04"
+    count    = 3
+    type     = "m6a.2xlarge"
+    role     = "controller"
   },
-  "AWrk_Ubu22" = {
-    platform    = "ubuntu_22.04"
-    count       = 1
-    type        = "c6a.xlarge"
-    volume_size = 100
-    public      = true
-    role        = "worker"
-    user_data   = ""
-  }
+  "Wrk_Ubu22" = { // group of Ubuntu 22 workers
+    platform = "ubuntu_22.04"
+    count    = 3
+    type     = "c6a.xlarge"
+    role     = "worker"
+  },
 }
